OrelIT/apigateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apigateway
  labels:
    app: apigateway
spec:
  replicas: 1
  template:
    metadata:
      name: apigateway
      labels:
        app: apigateway
    spec:
      containers:
        - name: apigateway
          image: cloud7ivolve/apigateway-taeknizon:2
          imagePullPolicy: Always
          ports:
            - containerPort: 8086
      restartPolicy: Always
      imagePullSecrets:
      - name: ivolve-docker
  selector:
    matchLabels:
      app: apigateway
