OrelIT/keycloak-admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: c7
  labels:
    app: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      hostAliases:
      - ip: 10.2.0.4
      hostnames:
      - keycloak.orelit.com
      containers:
      - args:
            - -Dkeycloak.profile.feature.upload_scripts=enabled
            - -Dkeycloak.profile.feature.token_exchange=enabled
            - -Dkeycloak.profile=preview
        name: keycloak
        image: quay.io/keycloak/keycloak:16.1.1
        ports:
        - name: http
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
          initialDelaySeconds: 120
