OrelIT/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: api-gateway
  name: api-gateway
  namespace: c7
spec:
  ports:
  - name: "8086"
    port: 8086
    targetPort: 8086
  selector:
    app: apigateway
  type: ClusterIP
