OrelIT/backend-refactor-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: backend-refactor
  name: backend-refactor
  namespace: c7
spec:
  type: NodePort
  ports:
  - name: "8088"
    port: 8088
    targetPort: 8088
    nodePort: 30003
  - name: "8000"
    port: 8000
    targetPort: 8000
    nodePort: 30002
  selector:
    name: backend-refactor
