OrelIT/calculator-ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: calculator-ui
  name: calculator-ui
  namespace: c7
spec:
  ports:
  - name: "3600"
    port: 3600
    targetPort: 3600
  selector:
    name: calculator-ui
