OrelIT/cron-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: cron
  name: cron
  namespace: c7
spec:
  type: NodePort
  ports:
  - name: "8090"
    port: 8090
    targetPort: 8090
    nodePort: 30006
  - name: "8002"
    port: 8002
    targetPort: 8002
    nodePort: 30007
  selector:
    name: cron
