OrelIT/keycloak-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: c7
  labels:
    app: keycloak
spec:
  type: NodePort
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    nodePort: 31624
  selector:
    app: keycloak
