OrelIT/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: payment
  name: payment
  namespace: c7
spec:
  ports:
  - name: "8084"
    port: 8084
    targetPort: 8084
  selector:
    name: payment
