OrelIT/c7-admin-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    #ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/configuration-snippet: |   
     # add_header X-Frame-Options "sameorigin";
     # add_header X-Content-Type-Options nosniff;
     # add_header Referrer-Policy 'same-origin';
     # add_header Content-Security-Policy "default-src 'self';";
      #add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";
  name: ingress-c7admin
  namespace: c7
spec:
  rules:
  - host: cloudconsole.orelit.com
    http:
      paths:
      - path: / 
        backend:
           service:
             name: cloud7-admin
             port:
               number: 8071
        pathType: ImplementationSpecific
