OrelIT/ingress-c7.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-c7
  namespace: c7
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  rules:
  - host: vault.orelit.com
    http:
      paths:
      - backend:
          service:
            name: vault
            port:
              number: 8200
        path: /
        pathType: Prefix
  - host: keycloak.orelit.com
    http:
      paths:
      - backend:
          service:
            name: keycloak
            port:
              number: 8080
        path: /
        pathType: Prefix
  - host: cloudconsole.orelit.com
    http:
      paths:
      - backend:
          service:
            name: new-ui
            port:
              number: 3500
        pathType: ImplementationSpecific
  - host: api.orelit.com
    http:
      paths:
      - backend:
          service:
            name: api-gateway
            port:
              number: 8086
        pathType: ImplementationSpecific
